--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,5 @@
-streamlit geopy folium streamlit-folium
+streamlit==1.12.0  
+altair==4.2.0  
+geopy==2.4.1  
+folium==0.18.0  
+streamlit-folium==0.11.0  
